[gd_scene load_steps=4 format=3 uid="uid://djde2gxuvi4wy"]

[ext_resource type="Texture2D" uid="uid://dkushodgai21s" path="res://assets/background.png" id="1_cgg54"]
[ext_resource type="Script" path="res://start_menu/start_menu.gd" id="1_ynbil"]
[ext_resource type="FontFile" uid="uid://mdn03mrrb765" path="res://ui_theme/Font/Metamorphous-Regular.ttf" id="3_1piai"]

[node name="Main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ynbil")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_cgg54")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1piai")
theme_override_font_sizes/font_size = 44
text = "Sylvia"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1piai")
theme_override_font_sizes/font_size = 24
text = "B a t t l e  D e m o "
horizontal_alignment = 1
justification_flags = 2
uppercase = true

[node name="Seperator3" type="Control" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(40, 10)
layout_mode = 2
text = "Start"

[node name="Seperator4" type="Control" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(40, 10)
layout_mode = 2
text = "Options"

[node name="Seperator3" type="Control" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
text = "Exit"

[node name="Seperator2" type="Control" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Options_Menu" type="PopupPanel" parent="."]
size = Vector2i(648, 368)
always_on_top = true

[node name="TextureRect" type="TextureRect" parent="Options_Menu"]
offset_left = 4.0
offset_top = 4.0
offset_right = 644.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_cgg54")

[node name="TabContainer" type="TabContainer" parent="Options_Menu"]
offset_left = 4.0
offset_top = 4.0
offset_right = 644.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="Text" type="Control" parent="Options_Menu/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options_Menu/TabContainer/Text"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -109.5
offset_right = 109.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="large_text" type="CheckButton" parent="Options_Menu/TabContainer/Text/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Large Text"

[node name="dyslexia" type="CheckButton" parent="Options_Menu/TabContainer/Text/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Dyslexia-Friendly Font"

[node name="return" type="Button" parent="Options_Menu/TabContainer/Text/VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="Sound" type="Control" parent="Options_Menu/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options_Menu/TabContainer/Sound"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -76.0
offset_right = 76.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SpinBox" type="SpinBox" parent="Options_Menu/TabContainer/Sound/VBoxContainer"]
layout_mode = 2
max_value = 10.0

[node name="return" type="Button" parent="Options_Menu/TabContainer/Sound/VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="Controls" type="Control" parent="Options_Menu/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options_Menu/TabContainer/Controls"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -109.5
offset_right = 109.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="return" type="Button" parent="Options_Menu/TabContainer/Controls/VBoxContainer"]
layout_mode = 2
text = "Return"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="toggled" from="Options_Menu/TabContainer/Text/VBoxContainer/large_text" to="." method="_on_large_text_toggled"]
[connection signal="toggled" from="Options_Menu/TabContainer/Text/VBoxContainer/dyslexia" to="." method="_on_dyslexia_toggled"]
[connection signal="pressed" from="Options_Menu/TabContainer/Text/VBoxContainer/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Options_Menu/TabContainer/Sound/VBoxContainer/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Options_Menu/TabContainer/Controls/VBoxContainer/return" to="." method="_on_return_pressed"]
